src/ordt/parse/parameters/ExtParmsParser.java
// Generated from /Users/snellenbach/git/open-register-design-tool/src/ordt/parse/grammars/ExtParms.g4 by ANTLR 4.5.1
package ordt.parse.parameters;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class ExtParmsParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.5.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, T__20=21, T__21=22, T__22=23, T__23=24, 
		T__24=25, T__25=26, T__26=27, T__27=28, T__28=29, T__29=30, T__30=31, 
		T__31=32, T__32=33, T__33=34, T__34=35, T__35=36, T__36=37, T__37=38, 
		T__38=39, T__39=40, T__40=41, T__41=42, T__42=43, T__43=44, T__44=45, 
		T__45=46, T__46=47, T__47=48, T__48=49, T__49=50, T__50=51, T__51=52, 
		T__52=53, T__53=54, T__54=55, T__55=56, T__56=57, T__57=58, T__58=59, 
		T__59=60, T__60=61, T__61=62, T__62=63, T__63=64, T__64=65, T__65=66, 
		T__66=67, T__67=68, T__68=69, T__69=70, T__70=71, T__71=72, T__72=73, 
		T__73=74, T__74=75, T__75=76, T__76=77, T__77=78, T__78=79, T__79=80, 
		T__80=81, T__81=82, T__82=83, T__83=84, T__84=85, T__85=86, T__86=87, 
		T__87=88, T__88=89, T__89=90, T__90=91, T__91=92, T__92=93, T__93=94, 
		T__94=95, T__95=96, WS=97, SL_COMMENT=98, ML_COMMENT=99, ID=100, NUM=101, 
		STR=102, LBRACE=103, RBRACE=104, EQ=105;
	public static final int
		RULE_ext_parms_root = 0, RULE_ext_parm_defs = 1, RULE_global_defs = 2, 
		RULE_global_parm_assign = 3, RULE_rdl_in_defs = 4, RULE_rdl_in_parm_assign = 5, 
		RULE_jspec_in_defs = 6, RULE_jspec_in_parm_assign = 7, RULE_rdl_out_defs = 8, 
		RULE_rdl_out_parm_assign = 9, RULE_jspec_out_defs = 10, RULE_jspec_out_parm_assign = 11, 
		RULE_systemverilog_out_defs = 12, RULE_systemverilog_out_parm_assign = 13, 
		RULE_uvmregs_out_defs = 14, RULE_uvmregs_out_parm_assign = 15, RULE_reglist_out_defs = 16, 
		RULE_reglist_out_parm_assign = 17, RULE_bench_out_defs = 18, RULE_bench_out_parm_assign = 19, 
		RULE_model_annotation = 20, RULE_annotation_command = 21, RULE_bool = 22;
	public static final String[] ruleNames = {
		"ext_parms_root", "ext_parm_defs", "global_defs", "global_parm_assign", 
		"rdl_in_defs", "rdl_in_parm_assign", "jspec_in_defs", "jspec_in_parm_assign", 
		"rdl_out_defs", "rdl_out_parm_assign", "jspec_out_defs", "jspec_out_parm_assign", 
		"systemverilog_out_defs", "systemverilog_out_parm_assign", "uvmregs_out_defs", 
		"uvmregs_out_parm_assign", "reglist_out_defs", "reglist_out_parm_assign", 
		"bench_out_defs", "bench_out_parm_assign", "model_annotation", "annotation_command", 
		"bool"
	};

	private static final String[] _LITERAL_NAMES = {
		null, "'global'", "'min_data_size'", "'base_address'", "'use_js_address_alignment'", 
		"'suppress_alignment_warnings'", "'default_base_map_name'", "'allow_unordered_addresses'", 
		"'debug_mode'", "'input'", "'rdl'", "'process_component'", "'resolve_reg_category'", 
		"'restrict_defined_property_names'", "'jspec'", "'process_typedef'", "'root_regset_is_addrmap'", 
		"'root_is_external_decode'", "'external_replication_threshold'", "'output'", 
		"'root_component_is_instanced'", "'output_jspec_attributes'", "'no_root_enum_defs'", 
		"'root_regset_is_instanced'", "'external_decode_is_root'", "'add_js_include'", 
		"'systemverilog'", "'leaf_address_size'", "'root_has_leaf_interface'", 
		"'root_decoder_interface'", "'leaf'", "'parallel'", "'serial8'", "'ring8'", 
		"'ring16'", "'ring32'", "'secondary_decoder_interface'", "'none'", "'engine1'", 
		"'secondary_base_address'", "'secondary_low_address'", "'secondary_high_address'", 
		"'secondary_on_child_addrmaps'", "'base_addr_is_parameter'", "'module_tag'", 
		"'use_gated_logic_clock'", "'gated_logic_access_delay'", "'use_external_select'", 
		"'block_select_mode'", "'internal'", "'external'", "'always'", "'export_start_end'", 
		"'always_generate_iwrap'", "'suppress_no_reset_warnings'", "'generate_child_addrmaps'", 
		"'ring_inter_node_delay'", "'bbv5_timeout_input'", "'include_default_coverage'", 
		"'generate_external_regs'", "'child_info_mode'", "'perl'", "'module'", 
		"'pulse_intr_on_clear'", "'reuse_iwrap_structures'", "'optimize_parallel_externals'", 
		"'use_async_resets'", "'uvmregs'", "'is_mem_threshold'", "'suppress_no_category_warnings'", 
		"'include_address_coverage'", "'max_reg_coverage_bins'", "'reuse_uvm_classes'", 
		"'skip_no_reset_db_update'", "'uvm_model_mode'", "'heavy'", "'lite1'", 
		"'translate1'", "'reglist'", "'display_external_regs'", "'show_reg_type'", 
		"'match_instance'", "'show_fields'", "'bench'", "'add_test_command'", 
		"'only_output_dut_instances'", "'total_test_time'", "'annotate'", "'set_reg_property'", 
		"'set_field_property'", "'set_fieldset_property'", "'set_regset_property'", 
		"'default'", "'instances'", "'components'", "'true'", "'false'", null, 
		null, null, null, null, null, "'{'", "'}'", "'='"
	};
	private static final String[] _SYMBOLIC_NAMES = {
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, "WS", "SL_COMMENT", "ML_COMMENT", "ID", "NUM", "STR", "LBRACE", 
		"RBRACE", "EQ"
	};
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "ExtParms.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public ExtParmsParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class Ext_parms_rootContext extends ParserRuleContext {
		public Ext_parm_defsContext ext_parm_defs() {
			return getRuleContext(Ext_parm_defsContext.class,0);
		}
		public TerminalNode EOF() { return getToken(ExtParmsParser.EOF, 0); }
		public Ext_parms_rootContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_ext_parms_root; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ExtParmsListener ) ((ExtParmsListener)listener).enterExt_parms_root(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ExtParmsListener ) ((ExtParmsListener)listener).exitExt_parms_root(this);
		}
	}

	public final Ext_parms_rootContext ext_parms_root() throws RecognitionException {
		Ext_parms_rootContext _localctx = new Ext_parms_rootContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_ext_parms_root);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(46);
			ext_parm_defs();
			setState(47);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Ext_parm_defsContext extends ParserRuleContext {
		public List<Global_defsContext> global_defs() {
			return getRuleContexts(Global_defsContext.class);
		}
		public Global_defsContext global_defs(int i) {
			return getRuleContext(Global_defsContext.class,i);
		}
		public List<Rdl_in_defsContext> rdl_in_defs() {
			return getRuleContexts(Rdl_in_defsContext.class);
		}
		public Rdl_in_defsContext rdl_in_defs(int i) {
			return getRuleContext(Rdl_in_defsContext.class,i);
		}
		public List<Jspec_in_defsContext> jspec_in_defs() {
			return getRuleContexts(Jspec_in_defsContext.class);
		}
		public Jspec_in_defsContext jspec_in_defs(int i) {
			return getRuleContext(Jspec_in_defsContext.class,i);
		}
		public List<Rdl_out_defsContext> rdl_out_defs() {
			return getRuleContexts(Rdl_out_defsContext.class);
		}
		public Rdl_out_defsContext rdl_out_defs(int i) {
			return getRuleContext(Rdl_out_defsContext.class,i);
		}
		public List<Jspec_out_defsContext> jspec_out_defs() {
			return getRuleContexts(Jspec_out_defsContext.class);
		}
		public Jspec_out_defsContext jspec_out_defs(int i) {
			return getRuleContext(Jspec_out_defsContext.class,i);
		}
		public List<Systemverilog_out_defsContext> systemverilog_out_defs() {
			return getRuleContexts(Systemverilog_out_defsContext.class);
		}
		public Systemverilog_out_defsContext systemverilog_out_defs(int i) {
			return getRuleContext(Systemverilog_out_defsContext.class,i);
		}
		public List<Uvmregs_out_defsContext> uvmregs_out_defs() {
			return getRuleContexts(Uvmregs_out_defsContext.class);
		}
		public Uvmregs_out_defsContext uvmregs_out_defs(int i) {
			return getRuleContext(Uvmregs_out_defsContext.class,i);
		}
		public List<Reglist_out_defsContext> reglist_out_defs() {
			return getRuleContexts(Reglist_out_defsContext.class);
		}
		public Reglist_out_defsContext reglist_out_defs(int i) {
			return getRuleContext(Reglist_out_defsContext.class,i);
		}
		public List<Bench_out_defsContext> bench_out_defs() {
			return getRuleContexts(Bench_out_defsContext.class);
		}
		public Bench_out_defsContext bench_out_defs(int i) {
			return getRuleContext(Bench_out_defsContext.class,i);
		}
		public List<Model_annotationContext> model_annotation() {
			return getRuleContexts(Model_annotationContext.class);
		}
		public Model_annotationContext model_annotation(int i) {
			return getRuleContext(Model_annotationContext.class,i);
		}
		public Ext_parm_defsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_ext_parm_defs; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ExtParmsListener ) ((ExtParmsListener)listener).enterExt_parm_defs(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ExtParmsListener ) ((ExtParmsListener)listener).exitExt_parm_defs(this);
		}
	}

	public final Ext_parm_defsContext ext_parm_defs() throws RecognitionException {
		Ext_parm_defsContext _localctx = new Ext_parm_defsContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_ext_parm_defs);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(61);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__0) | (1L << T__8) | (1L << T__18))) != 0) || _la==T__86) {
				{
				setState(59);
				switch ( getInterpreter().adaptivePredict(_input,0,_ctx) ) {
				case 1:
					{
					setState(49);
					global_defs();
					}
					break;
				case 2:
					{
					setState(50);
					rdl_in_defs();
					}
					break;
				case 3:
					{
					setState(51);
					jspec_in_defs();
					}
					break;
				case 4:
					{
					setState(52);
					rdl_out_defs();
					}
					break;
				case 5:
					{
					setState(53);
					jspec_out_defs();
					}
					break;
				case 6:
					{
					setState(54);
					systemverilog_out_defs();
					}
					break;
				case 7:
					{
					setState(55);
					uvmregs_out_defs();
					}
					break;
				case 8:
					{
					setState(56);
					reglist_out_defs();
					}
					break;
				case 9:
					{
					setState(57);
					bench_out_defs();
					}
					break;
				case 10:
					{
					setState(58);
					model_annotation();
					}
					break;
				}
				}
				setState(63);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Global_defsContext extends ParserRuleContext {
		public TerminalNode LBRACE() { return getToken(ExtParmsParser.LBRACE, 0); }
		public TerminalNode RBRACE() { return getToken(ExtParmsParser.RBRACE, 0); }
		public List<Global_parm_assignContext> global_parm_assign() {
			return getRuleContexts(Global_parm_assignContext.class);
		}
		public Global_parm_assignContext global_parm_assign(int i) {
			return getRuleContext(Global_parm_assignContext.class,i);
		}
		public Global_defsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_global_defs; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ExtParmsListener ) ((ExtParmsListener)listener).enterGlobal_defs(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ExtParmsListener ) ((ExtParmsListener)listener).exitGlobal_defs(this);
		}
	}

	public final Global_defsContext global_defs() throws RecognitionException {
		Global_defsContext _localctx = new Global_defsContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_global_defs);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(64);
			match(T__0);
			setState(65);
			match(LBRACE);
			setState(67); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(66);
				global_parm_assign();
				}
				}
				setState(69); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__1) | (1L << T__2) | (1L << T__3) | (1L << T__4) | (1L << T__5) | (1L << T__6) | (1L << T__7))) != 0) );
			setState(71);
			match(RBRACE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Global_parm_assignContext extends ParserRuleContext {
		public TerminalNode EQ() { return getToken(ExtParmsParser.EQ, 0); }
		public TerminalNode NUM() { return getToken(ExtParmsParser.NUM, 0); }
		public BoolContext bool() {
			return getRuleContext(BoolContext.class,0);
		}
		public TerminalNode STR() { return getToken(ExtParmsParser.STR, 0); }
		public Global_parm_assignContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_global_parm_assign; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ExtParmsListener ) ((ExtParmsListener)listener).enterGlobal_parm_assign(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ExtParmsListener ) ((ExtParmsListener)listener).exitGlobal_parm_assign(this);
		}
	}

	public final Global_parm_assignContext global_parm_assign() throws RecognitionException {
		Global_parm_assignContext _localctx = new Global_parm_assignContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_global_parm_assign);
		try {
			setState(94);
			switch (_input.LA(1)) {
			case T__1:
				enterOuterAlt(_localctx, 1);
				{
				setState(73);
				match(T__1);
				setState(74);
				match(EQ);
				setState(75);
				match(NUM);
				}
				break;
			case T__2:
				enterOuterAlt(_localctx, 2);
				{
				setState(76);
				match(T__2);
				setState(77);
				match(EQ);
				setState(78);
				match(NUM);
				}
				break;
			case T__3:
				enterOuterAlt(_localctx, 3);
				{
				setState(79);
				match(T__3);
				setState(80);
				match(EQ);
				setState(81);
				bool();
				}
				break;
			case T__4:
				enterOuterAlt(_localctx, 4);
				{
				setState(82);
				match(T__4);
				setState(83);
				match(EQ);
				setState(84);
				bool();
				}
				break;
			case T__5:
				enterOuterAlt(_localctx, 5);
				{
				setState(85);
				match(T__5);
				setState(86);
				match(EQ);
				setState(87);
				match(STR);
				}
				break;
			case T__6:
				enterOuterAlt(_localctx, 6);
				{
				setState(88);
				match(T__6);
				setState(89);
				match(EQ);
				setState(90);
				bool();
				}
				break;
			case T__7:
				enterOuterAlt(_localctx, 7);
				{
				setState(91);
				match(T__7);
				setState(92);
				match(EQ);
				setState(93);
				match(STR);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Rdl_in_defsContext extends ParserRuleContext {
		public TerminalNode LBRACE() { return getToken(ExtParmsParser.LBRACE, 0); }
		public TerminalNode RBRACE() { return getToken(ExtParmsParser.RBRACE, 0); }
		public List<Rdl_in_parm_assignContext> rdl_in_parm_assign() {
			return getRuleContexts(Rdl_in_parm_assignContext.class);
		}
		public Rdl_in_parm_assignContext rdl_in_parm_assign(int i) {
			return getRuleContext(Rdl_in_parm_assignContext.class,i);
		}
		public Rdl_in_defsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_rdl_in_defs; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ExtParmsListener ) ((ExtParmsListener)listener).enterRdl_in_defs(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ExtParmsListener ) ((ExtParmsListener)listener).exitRdl_in_defs(this);
		}
	}

	public final Rdl_in_defsContext rdl_in_defs() throws RecognitionException {
		Rdl_in_defsContext _localctx = new Rdl_in_defsContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_rdl_in_defs);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(96);
			match(T__8);
			setState(97);
			match(T__9);
			setState(98);
			match(LBRACE);
			setState(100); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(99);
				rdl_in_parm_assign();
				}
				}
				setState(102); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__10) | (1L << T__11) | (1L << T__12))) != 0) );
			setState(104);
			match(RBRACE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Rdl_in_parm_assignContext extends ParserRuleContext {
		public TerminalNode EQ() { return getToken(ExtParmsParser.EQ, 0); }
		public TerminalNode STR() { return getToken(ExtParmsParser.STR, 0); }
		public BoolContext bool() {
			return getRuleContext(BoolContext.class,0);
		}
		public Rdl_in_parm_assignContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_rdl_in_parm_assign; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ExtParmsListener ) ((ExtParmsListener)listener).enterRdl_in_parm_assign(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ExtParmsListener ) ((ExtParmsListener)listener).exitRdl_in_parm_assign(this);
		}
	}

	public final Rdl_in_parm_assignContext rdl_in_parm_assign() throws RecognitionException {
		Rdl_in_parm_assignContext _localctx = new Rdl_in_parm_assignContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_rdl_in_parm_assign);
		try {
			setState(115);
			switch (_input.LA(1)) {
			case T__10:
				enterOuterAlt(_localctx, 1);
				{
				setState(106);
				match(T__10);
				setState(107);
				match(EQ);
				setState(108);
				match(STR);
				}
				break;
			case T__11:
				enterOuterAlt(_localctx, 2);
				{
				setState(109);
				match(T__11);
				setState(110);
				match(EQ);
				setState(111);
				bool();
				}
				break;
			case T__12:
				enterOuterAlt(_localctx, 3);
				{
				setState(112);
				match(T__12);
				setState(113);
				match(EQ);
				setState(114);
				bool();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Jspec_in_defsContext extends ParserRuleContext {
		public TerminalNode LBRACE() { return getToken(ExtParmsParser.LBRACE, 0); }
		public TerminalNode RBRACE() { return getToken(ExtParmsParser.RBRACE, 0); }
		public List<Jspec_in_parm_assignContext> jspec_in_parm_assign() {
			return getRuleContexts(Jspec_in_parm_assignContext.class);
		}
		public Jspec_in_parm_assignContext jspec_in_parm_assign(int i) {
			return getRuleContext(Jspec_in_parm_assignContext.class,i);
		}
		public Jspec_in_defsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_jspec_in_defs; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ExtParmsListener ) ((ExtParmsListener)listener).enterJspec_in_defs(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ExtParmsListener ) ((ExtParmsListener)listener).exitJspec_in_defs(this);
		}
	}

	public final Jspec_in_defsContext jspec_in_defs() throws RecognitionException {
		Jspec_in_defsContext _localctx = new Jspec_in_defsContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_jspec_in_defs);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(117);
			match(T__8);
			setState(118);
			match(T__13);
			setState(119);
			match(LBRACE);
			setState(121); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(120);
				jspec_in_parm_assign();
				}
				}
				setState(123); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__14) | (1L << T__15) | (1L << T__16) | (1L << T__17))) != 0) );
			setState(125);
			match(RBRACE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
